[metadata]
name = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = 
author_email = 
license = 
license_file = LICENSE
platforms = 
project_urls =
    Bug Tracker = 
    Documentation = 
    Source Code = 

[pylama:pycodestyle]
max_line_length = 180


